Adding Angular to project

--- a/ExpenseManager.Web/Views/Home/Index.cshtml
+++ b/ExpenseManager.Web/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@section SPAViews {
-    @Html.Partial("_Home")
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@section Scripts{
-    @Scripts.Render("~/bundles/knockout")
-    @Scripts.Render("~/bundles/app")
-}
+
+
+<div ui-view></div>
