--- a/ExpenseManager.Web/Views/Shared/_Layout.cshtml
+++ b/ExpenseManager.Web/Views/Shared/_Layout.cshtml
@@ -1,44 +1,46 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="em" ng-cloak>
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title></title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container" ng-controller="menuController as vm">
+        <div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </button>                              
+                @*@Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
+                    <li><a ui-sref="homeIndex">Home</a></li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home", new {area = ""}, null)</li>*@
+                    <li>@Html.ActionLink("API", "Index", "Help", new {area = "HelpPage"}, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        @RenderSection("SPAViews", required: false)
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+</div>
+<div class="container body-content">
+    @RenderBody()
+    @RenderSection("SPAViews", required: false)
+    <hr/>
+</div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("Scripts", required: false)
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/bundles/angularJS")
+@Scripts.Render("~/bundles/ExpenseManager/js")
+@RenderSection("Scripts", required: false)
 </body>
 </html>
