--- a/ExpenseManager.Web/Views/Shared/_Layout.cshtml
+++ b/ExpenseManager.Web/Views/Shared/_Layout.cshtml
@@ -17,23 +17,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>                              
-                @*@Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})*@
+                </button>                                             
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a ui-sref="homeIndex">Home</a></li>
-                    @*<li>@Html.ActionLink("Home", "Index", "Home", new {area = ""}, null)</li>*@
-                    <li>@Html.ActionLink("API", "Index", "Help", new {area = "HelpPage"}, null)</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+                    <li><a ui-sref="expenseSummary">Expense Summary</a></li>
+                    <li><a ui-sref="randomness">Randomness</a></li>
+                </ul>                
             </div>
         </div>
     </div>
 </div>
 <div class="container body-content">
     @RenderBody()
-    @RenderSection("SPAViews", required: false)
+    
     <hr/>
 </div>
 
