module name changes and new layout

--- a/ExpenseManager.Web/Views/Shared/_Layout.cshtml
+++ b/ExpenseManager.Web/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a ui-sref="homeIndex">Home</a></li>
-                    <li><a ui-sref="expenseSummary">Expense Summary</a></li>
-                    <li><a ui-sref="randomness">Randomness</a></li>
+                    <li><a ui-sref="homeIndex">Table of Contents</a></li>
+                    <li><a ui-sref="filters">Filters</a></li>
+                    <li><a ui-sref="expressions">Expressions</a></li>
                 </ul>                
             </div>
         </div>
