Catching everything up

--- a/ExpenseManager.Web/Views/Shared/_Layout.cshtml
+++ b/ExpenseManager.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li><a ui-sref="homeIndex">Table of Contents</a></li>
                     <li><a ui-sref="filters">Filters</a></li>
                     <li><a ui-sref="expressions">Expressions</a></li>
+                    <li><a ui-sref="expenseSummary">Expense Summary</a></li>
                 </ul>                
             </div>
         </div>
